--- a/style.css
+++ b/style.css
@@ -751,6 +751,7 @@
         align-items: center;
 
         gap: 2.5rem;
+        justify-content: center;
 
       }
 
@@ -765,6 +766,7 @@
         font-weight: 600;
 
          text-align: center;
+          justify-content: center;
 
       }
 
@@ -774,6 +776,7 @@
 
         line-height: 1;
           text-align: center;
+          justify-content: center;
 
       }
 
@@ -787,6 +790,7 @@
 
         margin-bottom: 30px;
           text-align: center;
+          justify-content: center;
 
       }
 
