--- a/style.css
+++ b/style.css
@@ -746,7 +746,7 @@
 
         display: grid;
 
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 50% 50%;
 
         align-items: center;
 
