--- a/style.css
+++ b/style.css
@@ -751,7 +751,7 @@
         align-items: center;
 
         gap: 2.5rem;
-        justify-content: center;
+        justify-items: center;
 
       }
 
@@ -808,7 +808,7 @@
 
        .list li a{
 
-        display: block;
+        
 
         color: var(--second-color);
 
